# ComputerGraphics

./: .gitignore  CMakeLists.txt  Makefile
include/: Cilindro.h  Cone.h  Plane.h  PontoLuminoso.h  Ray.h  Sphere.h  Vec3.h
src/: Cilindro.cpp  Cone.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Vec3.cpp  main.cpp
